fixed background image not showing on hompage and responsive bar alignment

--- a/public/assets/admin.css
+++ b/public/assets/admin.css
@@ -269,6 +269,7 @@ a:hover.toplink {
 	.heading h3 {
 		font-size: 22px;
 		margin: 0px 0px;
+		padding: 37px 29px;
 	}
 	.events-container {
 		justify-content: center;
