--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -66,55 +66,10 @@ html, body {
 	font-size: 40px;
 }
 
-/* .placeholder-fix::-webkit-input-placeholder {
-  color: gray;
-  -webkit-transition: all 0.2s ease;
-  -ms-transition: all 0.2s ease;
-  -moz-transition: all 0.2s ease;
-  -o-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-}
-
-.placeholder-fix::-moz-placeholder {
-  color: gray;
-  -webkit-transition: all 0.2s ease;
-  -ms-transition: all 0.2s ease;
-  -moz-transition: all 0.2s ease;
-  -o-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-}
-
-.placeholder-fix:-moz-placeholder {
-  color: gray;
-  -webkit-transition: all 0.2s ease;
-  -ms-transition: all 0.2s ease;
-  -moz-transition: all 0.2s ease;
-  -o-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-}
-
-.placeholder-fix:focus::-webkit-input-placeholder {
-  color: transparent;
-}
-
-.placeholder-fix:focus::-moz-placeholder {
-  color: transparent;
-}
-
-.placeholder-fix:-moz-placeholder {
-  color: transparent;
-} */
-
-/* 
-  ##Device = Most of the Smartphones Mobiles (Portrait)
-  ##Screen = B/w 320px to 479px
-*/
-
 @media (min-width: 200px) and (max-width: 700px) {
 	.wrapper {
 		text-align: center;
 		background-size: contain;
-		background: linear-gradient(to bottom, #555553c4, #464849), url("https://images.unsplash.com/photo-1508873699372-7aeab60b44ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80");
 	}
 	.logo-link {
 		display: inline-block;
